package iuh.fit.decorator;

public interface OrderService {
    void process();
}
