package iuh.fit.state;

public interface OrderState {
    void handle(Order order);
}