package iuh.fit.strategy;

public interface PaymentStrategy {
    void pay();
}